Fixes the Subscribe button layout issue

--- a/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough.sass
+++ b/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough.sass
@@ -180,6 +180,7 @@
       float: right
 
       li.flag-walkthrough_broken,
-      li.flag-mark_for_screening
+      li.flag-mark_for_screening,
+      li.flag-subscribe_content
         a
           +font-size(.6)
